--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 # ===============================
 # = DATA SOURCE
 # ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/sv_db?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=UTC&useSSL=false
 #spring.datasource.url= jdbc:mysql://35.188.168.247:3306/sv_db?useTimezone=true&serverTimezone=UTC&useSSL=false
-spring.datasource.url= jdbc:mysql://localhost:3306/sv_db?useTimezone=true&serverTimezone=UTC&useSSL=false
+#spring.datasource.url= jdbc:mysql://localhost:3306/sv_db?useTimezone=true&serverTimezone=UTC&useSSL=false
 
 
 #spring.datasource.username=admin
